--- a/Pages/Platillos.xaml
+++ b/Pages/Platillos.xaml
@@ -1,44 +1,48 @@
 <?xml version="1.0" encoding="utf-8" ?>
+    
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+             
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             
              x:Class="Marthas_Coffee_App_Movil.Pages.Platillos"
+             
              Title="Platillos">
 
     <ScrollView>
 
         <VerticalStackLayout Padding="10,10,10,10">
 
-            <Grid RowSpacing="5" ColumnSpacing="5" >
+            <Grid ColumnSpacing="5">
 
                 <Grid.RowDefinitions>
 
                     <RowDefinition/>
 
-                    <RowDefinition/>
+                    <RowDefinition Height="20"/>
 
-                    <RowDefinition/>
+                    <RowDefinition Height="200"/>
 
-                    <RowDefinition/>
+                    <RowDefinition Height="20"/>
  
-                    <RowDefinition/>
+                    <RowDefinition Height="20"/>
 
-                    <RowDefinition/>
+                    <RowDefinition Height="20"/>
 
-                    <RowDefinition/>
+                    <RowDefinition Height="200"/>
 
-                    <RowDefinition/>
+                    <RowDefinition Height="20"/>
 
-                    <RowDefinition/>
+                    <RowDefinition Height="20"/>
 
-                    <RowDefinition/>
+                    <RowDefinition Height="20"/>
 
-                    <RowDefinition/>
+                    <RowDefinition Height="200"/>
 
-                    <RowDefinition/>
+                    <RowDefinition Height="20"/>
 
-                    <RowDefinition/>
+                    <RowDefinition Height="20"/>
 
-                    <RowDefinition/>
+                    <RowDefinition Height="20"/>
 
                 </Grid.RowDefinitions>
 
@@ -50,23 +54,27 @@
 
                     <ColumnDefinition/>
 
-                    <ColumnDefinition/>
-
                 </Grid.ColumnDefinitions>
+                
+                <!-- Fila 0 -->
 
                 <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Clicked="RegresoInicio_Clicked" x:Name="RegeresoInicio" Text="↩"  FontSize="20" VerticalOptions="Center" HorizontalOptions="Start" CornerRadius="60" FontAttributes="Bold" />
 
                 <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" FontSize="30" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" Text="Platillos"/>
 
+                <!-- Fila 1 -->
+
                 <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" HorizontalOptions="Center" FontSize="20" FontAttributes="Bold" Text="Ensaladas"/>
 
-                <ImageButton Grid.Row="2" Grid.Column="0" x:Name="Pastel"  Source="ensaladapollo.jpg" />
+                <!-- Fila 2 -->
 
-                <ImageButton Grid.Row="2" Grid.Column="1" x:Name="Mochi"  Source="sasa.jpg"  />
+                <ImageButton Grid.Row="2" Grid.Column="0" x:Name="Pastel"  Source="ensaladapollo.png"/>
 
-                <ImageButton Grid.Row="2" Grid.Column="2" x:Name="Sandwich" Source="ensa.jpg"/>
+                <ImageButton Grid.Row="2" Grid.Column="1" x:Name="Mochi"  Source="sasa.png"  />
 
-                <ImageButton Grid.Row="2" Grid.Column="3" x:Name="TresLeches" Source="ensalada.jpg"/>
+                <ImageButton Grid.Row="2" Grid.Column="2" x:Name="Sandwich" Source="ensa.png"/>
+
+                <!-- Fila 3 -->
 
                 <Label Grid.Row="3" Grid.Column="0"  FontSize="10" HorizontalOptions="Center" Text="Ensalada 1"  FontAttributes="Bold"/>
 
@@ -74,7 +82,7 @@
 
                 <Label Grid.Row="3" Grid.Column="2"  FontSize="10" HorizontalOptions="Center" Text="Ensalada 3"  FontAttributes="Bold"/>
 
-                <Label Grid.Row="3" Grid.Column="3"  FontSize="10" HorizontalOptions="Center" Text="Ensalada 4"  FontAttributes="Bold"/>
+                <!-- Fila 4 -->
 
                 <Label Grid.Row="4" Grid.Column="0" HorizontalOptions="Start" FontSize="10"  Text="$:" FontAttributes="Bold"/>
 
@@ -87,20 +95,20 @@
                 <Label Grid.Row="4" Grid.Column="2" HorizontalOptions="Start" FontSize="10"  Text="$:"     FontAttributes="Bold"/>
 
                 <Label Grid.Row="4" Grid.Column="2" HorizontalOptions="Center" FontSize="10"  Text="00.00"  FontAttributes="Bold"/>
-
-                <Label Grid.Row="4" Grid.Column="3" HorizontalOptions="Start" FontSize="10"  Text="$:"     FontAttributes="Bold"/>
-
-                <Label Grid.Row="4" Grid.Column="3" HorizontalOptions="Center" FontSize="10"  Text="00.00"  FontAttributes="Bold"/>
+              
+                <!-- Fila 5 -->
 
                 <Label Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" HorizontalOptions="Center" FontSize="20" FontAttributes="Bold" Text="Entradas"/>
 
-                <ImageButton Grid.Row="6" Grid.Column="0" Source="rollitos.jpg"/>
+                <!-- Fila 6 -->
 
-                <ImageButton Grid.Row="6" Grid.Column="1" Source="crema.jpg"/>
+                <ImageButton Grid.Row="6" Grid.Column="0" Source="rollitos.png"/>
 
-                <ImageButton Grid.Row="6" Grid.Column="2" Source="pan.jpg"/>
+                <ImageButton Grid.Row="6" Grid.Column="1" Source="crema.png"/>
 
-                <ImageButton Grid.Row="6" Grid.Column="3" Source="kimkim.jpg"/>
+                <ImageButton Grid.Row="6" Grid.Column="2" Source="pan.png"/>
+
+                <!-- Fila 7 -->
 
                 <Label Grid.Row="7" Grid.Column="0" FontSize="10" Text="Entrada 1"   HorizontalOptions="Center" FontAttributes="Bold"/>
 
@@ -108,7 +116,7 @@
 
                 <Label Grid.Row="7" Grid.Column="2" FontSize="10"  Text="Entrada 3" HorizontalOptions="Center" FontAttributes="Bold"/>
 
-                <Label Grid.Row="7" Grid.Column="3" FontSize="10"  Text="Entrada 4" HorizontalOptions="Center"  FontAttributes="Bold"/>
+                <!-- Fila 8 -->
 
                 <Label Grid.Row="8" Grid.Column="0" HorizontalOptions="Start" FontSize="10"  Text="$:" FontAttributes="Bold"/>
                                  
@@ -121,20 +129,20 @@
                 <Label Grid.Row="8" Grid.Column="2" HorizontalOptions="Start" FontSize="10"  Text="$:"     FontAttributes="Bold"/>
                                  
                 <Label Grid.Row="8" Grid.Column="2" HorizontalOptions="Center" FontSize="10"  Text="00.00"  FontAttributes="Bold"/>
-                                 
-                <Label Grid.Row="8" Grid.Column="3" HorizontalOptions="Start" FontSize="10"  Text="$:"     FontAttributes="Bold"/>
-                                 
-                <Label Grid.Row="8" Grid.Column="3" HorizontalOptions="Center" FontSize="10"  Text="00.00"  FontAttributes="Bold"/>
+            
+                <!-- Fila 9 -->
 
                 <Label Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="4" VerticalOptions="Center" HorizontalOptions="Center" FontSize="20" FontAttributes="Bold" Text="Platos fuertes"/>
 
-                <ImageButton Grid.Row="10" Grid.Column="0" Source="bibimbap.jpg"/>
+                <!-- Fila 10 -->
 
-                <ImageButton Grid.Row="10" Grid.Column="1" Source="sushi.jpg"/>
+                <ImageButton Grid.Row="10" Grid.Column="0" Source="bibimbap.png"/>
 
-                <ImageButton Grid.Row="10" Grid.Column="2" Source="carne.jpg"   />
+                <ImageButton Grid.Row="10" Grid.Column="1" Source="sushi.png"/>
 
-                <ImageButton Grid.Row="10" Grid.Column="3" Source="kimchi.jpg"  />
+                <ImageButton Grid.Row="10" Grid.Column="2" Source="carne.png"   />
+
+                <!-- Fila 11 -->
 
                 <Label Grid.Row="11" Grid.Column="0" HorizontalOptions="Center" FontSize="10" Text="Plato 1"  FontAttributes="Bold"/>
                 
@@ -142,7 +150,7 @@
 
                 <Label Grid.Row="11" Grid.Column="2" HorizontalOptions="Center" FontSize="10"  Text="Plato 3"  FontAttributes="Bold"/>
                 
-                <Label Grid.Row="11" Grid.Column="3" HorizontalOptions="Center" FontSize="10"  Text="Plato 4"  FontAttributes="Bold"/>
+                <!-- Fila 12 -->
 
                 <Label Grid.Row="12" Grid.Column="0" HorizontalOptions="Start" FontSize="10"  Text="$:" FontAttributes="Bold"/>
                                  
@@ -155,11 +163,7 @@
                 <Label Grid.Row="12" Grid.Column="2" HorizontalOptions="Start" FontSize="10"  Text="$:"     FontAttributes="Bold"/>
                                  
                 <Label Grid.Row="12" Grid.Column="2" HorizontalOptions="Center" FontSize="10"  Text="00.00"  FontAttributes="Bold"/>
-                                 
-                <Label Grid.Row="12" Grid.Column="3" HorizontalOptions="Start" FontSize="10"  Text="$:"     FontAttributes="Bold"/>
-                                 
-                <Label Grid.Row="12" Grid.Column="3" HorizontalOptions="Center" FontSize="10"  Text="00.00"  FontAttributes="Bold"/>
-                
+               
             </Grid>
 
             </VerticalStackLayout>
